# forum

./: .env.example  README.md  pyproject.toml  webpack.config.js
database_backups/: backup.sql  backup2.dump  release_custom.sql
optimized/src/static/css/catalog/: common.min.121bb7180e1b90be.css  main-page-v3.min.7309e6f7f633c75b.css  main-v3.min.716ab6e5b2568b3a.css
optimized/src/static/js/: comment_input_stylization.js  comment_manager.js  infinity_scroll.js
optimized/src/templates/: article.html  article_template.html  catalog.html
src/: database.py  main.py  models.py  parser.py  run_with_reload.sh  run_with_reload_prod.sh
src/static/css/1000_menu/: general.v1695192679.css  page.v1689551599.css
src/static/css/animals/: autoptimize_5a333b52e851e71be3e508bae4bceeb8.css
src/static/css/catalog/: common.min.121bb7180e1b90be.css  main-v3.min.716ab6e5b2568b3a.css
src/static/css/travel/: articlepage.css  header-navbar-hedge.css  header.css  top-banner.css  view-v2.css
src/static/js/: comment_input_stylization.js  comment_manager.js  infinity_scroll.js  parser.js
src/templates/: 1000_menu.html  animals.html  article.html  article_template.html  catalog.html  lifehacker.html  travel.html
